# risc0-lean-example

./: README.md  justfile
guest/: Guest.lean  lake-manifest.json  lakefile.toml
guest/Guest/: Basic.lean
guest_build/: .gitignore  CMakeLists.txt  justfile
guest_build/toolchains/: riscv32im-risc0-zkvm-elf.cmake
host/src/: main.rs
lean/: Main.lean
methods/guest/: .gitignore  Cargo.toml  build.rs  risc0_lean.c  shims.c
methods/guest/include/: githash.h
methods/guest/include/lean/: config.h  version.h
methods/guest/src/: main.rs  malloc.rs
